--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img.img-responsive:hover {
 }
 
 .top_header {
-    margin: 10px 50px 0 0;
+    margin: 10px 15px 0 0;
 }
 
 .top_header a {
@@ -1471,8 +1471,8 @@ main_search {
 }
 
 .no-border {
-    border: 0;
-    box-shadow: none;
+    border: 0!important;
+    box-shadow: none!important;
     /* You may want to include this as bootstrap applies these styles too */
 }
 .header-carousal .search-sec .form-section {
@@ -2427,8 +2427,8 @@ button.close{
     border-radius: 0px;
 }
 #loginModal .modal-content {
-    min-height: 324px;
-    max-height: 300px;
+    min-height: 330px;
+    max-height: 350px;
     border-radius: 0px;
 }
 .modal-header {    
@@ -3085,6 +3085,218 @@ select.custom-select:after {
     font-weight: 600;
     padding-left: 5px;
 }
+.ui-widget.ui-widget-content {
+    border: 1px solid #a09f9f;
+}
+.business {
+    background-color: #2298d0;
+    padding-bottom: 10px;
+}
+.sudc_business_menu .navbar {
+    background-color: #2298d0;
+    border: 0;
+    margin: 40px 0 0px 0;
+    float: right;
+}
+.sudc_business_menu .navbar ul li a {
+    color : #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+}
+.sudc_business_menu .navbar ul li {
+    margin-left: 20px;
+}
+.sudc_business_menu .navbar-default .navbar-nav>.active > a, .sudc_business_menu .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #2298d0;
+    background-color: #FFFFFF;
+}
+.sudc_business_menu .navbar-default .navbar-nav>li>a {
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+}
+.sudc_business_menu .navbar-nav>li>a {
+    padding: 5px 20px 5px 20px;
+}
+.sudc_business_menu .navbar-default .navbar-nav>li>a:focus, .sudc_business_menu .navbar-default .navbar-nav>li>a:hover {
+    color: #2298d0;
+    background-color: #FFFFFF;
+}
+
+.sudc_business_menu .navbar ul li.phoneNumber {
+    color : #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 5px 0 5px 0;
+}
+.business_submenu .nav-tabs > li > a {
+    color: #000;
+    background-color: rgba(255,255,255);
+    border: 0;
+    font-size: 16px;
+    font-weight: 500;
+}
+.business_submenu .nav-tabs > li:hover > a {
+    color: #2298d0;
+    background-color: rgba(255,255,255);
+    border: 0;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #2298d0;
+    transition-delay: 0.5;
+}
+.business_submenu .nav-tabs > li.active > a {
+    color: #2298d0;
+    background-color: rgba(255,255,255);
+    border: 0;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #2298d0;
+}
+.business_submenu {
+    background-color: rgba(255,255,255);
+    width: 100%;
+    max-width: 1920px;
+}
+.business_submenu .nav-tabs > li {
+    float: left;
+    margin-bottom: -1px;
+    width: auto;
+}
+.business_submenu .nav-tabs {
+    border: 0;
+}
+.footer_business p {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-bottom: 10px;
+    padding-right: 0px;
+}
+.footer_business {
+    background-color: #2c2c2c;
+    padding: 70px 0;
+    padding: 30px 0 0px 0;
+}
+p.business_footer_header {
+    color: #FFF!important;
+    font-weight: 600;
+}
+p.phone_ques {
+    color: #9c9b9b!important;
+    font-weight: 600;
+}
+.footer_business p.phone {
+    color: rgba(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.footer_business_bottom p {
+    color: #FFFFFF;
+    margin-bottom: 0;
+    font-weight: 400;
+    font-size: 14px;
+    padding: 10px;
+}
+.footer_business.footer_top img {
+    max-width: 75%;
+    margin-bottom: 30px;
+    margin-right: 10px;
+    float: left;
+}
+section.businss_login {
+    margin-top: 25px;
+    margin-bottom: 70px;
+}
+.signup-other-business a.signup-g:hover {
+    background: #de5e46;
+    color: #fff;
+}
+.signup-other-business a.signup-g {
+    background: #dc4b38;
+    height: 50px;
+    padding: 12px;
+    margin-bottom: 15px;
+}
+.signup-other-business a.signup-fb:hover {
+    background: #596da2;
+    color: #fff;
+}
+.signup-other-business a.signup-fb {
+    background: #48629b;
+    height: 50px;
+    padding: 12px;
+}
+.business_or {
+    margin: 20px auto;
+}
+.mb_20 {
+    margin-bottom: 20px!important;
+}
+.login_image {
+    margin-top: 70px;
+}
+ 
+.business_logged .navbar ul li a {
+    color : #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+}
+.business_logged .navbar ul li {
+    margin-left: 20px;
+}
+.business_logged .navbar-default .navbar-nav>.active > a, .sudc_business_menu .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #2298d0;
+    background-color: #FFFFFF;
+}
+.business_logged >li>a {
+    color: #2298d0;
+    border: 0;
+}
+.sudc_business_menu .navbar .business_logged ul li>a {
+    padding: 5px 5px 5px 5px;
+}
+.sudc_business_menu .navbar .business_logged ul li a {
+    color: #2298d0;
+    font-size: 18px;
+    font-weight: 500;
+    border: 0 !important;
+}
+.business_logged ul li {
+    padding-left: 5px!important;
+    margin-left: 0 !important;
+}
+.business_logged a.dropdown-toggle.logged_user {
+    color: #FFFFFF;
+    border: 0px!important;
+}
+.sudc_business_menu .navbar .business_logged li>a:focus, .sudc_business_menu .navbar .business_logged li>a:hover {
+    color: #FFFFFF;
+    background-color: #2298d0;
+    padding: 5px auto;
+}
+.businss_dashboard .box {
+    border: 1px solid #d0d0d0;
+    border-radius: 5px;
+    padding: 10px 5px;
+    display: block;
+    margin: 15px 5px;
+    height: 80px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Device */
 @media screen and (max-width:480px) {
@@ -4161,7 +4373,7 @@ select.custom-select:after {
     }
 
     .top_header {
-        margin: 10px 36px 0px 0;
+        margin: 10px 0px 0px 0;
     }
 
     .grid-img {
