--- a/css/style.css
+++ b/css/style.css
@@ -3313,8 +3313,9 @@ section.businss_dashboard {
     color: #FFFFFF;
     background-color: transparent;
 }
-
-
+.sudc_business_menu  ul.nav > li {
+  margin-left: 15px;    
+}
 
 
 
