--- a/css/style.css
+++ b/css/style.css
@@ -3411,12 +3411,14 @@ section.business_sell.text-center .btn {
     background-color: #FFF;
     height: 500px;
     margin: 20px 0;
+    padding: 10px 20px 20px 20px;
 
 }
 .box_grey {
     background-color: #f3f3f3;
     height: 500px;
     margin: 20px 0;
+    padding: 10px 20px 20px 20px;
 }
 
 
