--- a/css/style.css
+++ b/css/style.css
@@ -3177,6 +3177,7 @@ select.custom-select:after {
     float: left;
     margin-bottom: 0px;
     width: auto;
+    white-space: nowrap;
 }
 .business_submenu .nav-tabs {
     border: 0;
@@ -3504,7 +3505,9 @@ p.privacy_contet {
 .pb0{
     padding-bottom: 0px!important;
 }
-
+.logo_business {
+    z-index: 2;
+}
 
 
 
@@ -3855,7 +3858,7 @@ p.privacy_contet {
 
     .header-carousal .heroCarousal {
         position: relative;
-        height: 180px;
+        height: 230px;
         background-color: #5f5959;
     }
     .search-sec .form-group.where_in {
@@ -3903,7 +3906,7 @@ p.privacy_contet {
     }
 
     .app_store_pod {
-        height: 580px;
+        height: 600px;
     }
 
     .looking label {
@@ -4107,10 +4110,104 @@ p.privacy_contet {
     .looking_select {
         margin-bottom: 5px;
     }
+    .business_submenu .nav-tabs {
+        border: 0;
+        display: flex;
+        overflow-x: scroll;
+    }
+    section.business_content_home {
+        margin: 0px auto 0px auto;
+    }
+    .business_content_home .content {
+        padding: 0px 30px;
+    }
+    header.sticky_header .logo_business .logo img {
+        margin-top: 12px;
+    }
+    .business_info_section p {
+        padding: 30px 0px;
+        color: #726f6f;
+        font-size: 16px;
+    }
+    .footer-phone {
+        margin-top: 20px;
+    }
+    .businss_login .form-inline input[type='file'].form-control {
+        -webkit-box-shadow: none;
+        margin-top: 20px;
+        padding-left: 0;
+    }
 }
 
 /*480px*/
 @media screen and (min-width : 481px) and (max-width: 767px) {
+    .sudc_business_menu .navbar {
+        background-color: #2298d0;
+        border: 0;
+        margin: 10px 0 0px 0;
+    }
+    .sudc_business_menu .navbar-default .navbar-toggle .icon-bar {
+        background-color: #FFF;
+    }
+    .sudc_business_menu .navbar-default .navbar-toggle:focus, .sudc_business_menu .navbar-default .navbar-toggle:hover {
+        background-color: transparent;
+    }
+    .sudc_business_menu .navbar {
+        background-color: #2298d0;
+        border: 0;
+        margin: 15px 0 0px 0;
+        float: none;
+    }
+    .sudc_business_menu .navbar-nav {
+        margin: 15px 15px;
+    }
+    .sudc_business_menu ul.nav > li {
+        margin-left: 15px;
+        margin-bottom: 15px;
+    }
+    .logo_business {
+        z-index: 2;
+    }
+    .business-header-carousal {
+        position: relative;
+        height: 300px;
+        background-color: #d0d0d0;
+    }
+    .business-search-sec {
+        position: absolute;
+        right: 0%;
+        top: 3%;
+        border-radius: 0px;
+    }
+    .businss_login .form-inline input[type='file'].form-control {
+        -webkit-box-shadow: none;
+        margin-top: 20px;
+        padding-left: 0;
+    }
+    .footer-phone {
+        margin-top: 20px;
+    }
+    .business_info_section p {
+        padding: 30px 0px;
+        color: #726f6f;
+        font-size: 16px;
+    }
+    header.sticky_header  .logo_business  .logo img {
+        margin-top: 12px;
+    }
+    .business_content_home .content {
+        padding: 0px 30px;
+    }
+    .business-header-carousal {
+        position: relative;
+        height: 300px;
+        background-color: #d0d0d0;
+    }
+    .business_submenu .nav-tabs {
+        border: 0;
+        display: flex;
+        overflow-x: scroll;
+    }
     .hide_on_mobile {
         display: none;
     }
@@ -4345,7 +4442,7 @@ p.privacy_contet {
 
     .heroCarousal {
         position: relative;
-        height: 210px;
+        height: 260px;
         background-color: #5f5959;
     }
 
