--- a/css/style.css
+++ b/css/style.css
@@ -3554,7 +3554,7 @@ section.businss_dashboard.user_dashboard {
     margin-bottom: 20px;
 }
 section.recentlyViewed.user_dash_recent {
-    margin: 30px 0 50px 0;
+    margin: 60px 0 50px 0;
 }
 .userprofile_orders img.img-responsive {
     width: 75%;
@@ -3583,6 +3583,23 @@ section.recentlyViewed.user_dash_recent {
     animation: spin 1s linear infinite;
 
 }
+button.busi_sub_btn {
+    width: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @keyframes spin {
     from {
         transform:rotate(0deg);
@@ -5243,6 +5260,9 @@ section.recentlyViewed.user_dash_recent {
         right: 1%;
         top: 25%;
         border-radius: 0px;
+    }
+    .businss_dashboard .box {
+        height: 90px;
     }
 }
 
