--- a/css/product.css
+++ b/css/product.css
@@ -419,10 +419,10 @@ section.shop_banner {
     content: "|";
 }
 .ui-slider-horizontal {
-    height: 5px!important;
+    height: 2px!important;
 }
 .ui-slider-horizontal .ui-slider-handle {
-    top: -9px!important;
+    top: -5px!important;
     margin-left: -.6em;
 }
 
@@ -664,8 +664,28 @@ h3.prod_name {
         text-align: left!important;
         margin: 20px 0;
     }
-
-
+    .userprofile_orders .mt25 {
+        margin-top: 10px;
+    }
+    .userprofile_orders  h3.prod_name {
+        margin-bottom: 10px;
+        margin-top: 30px;
+        text-align: center;
+    }
+    .userprofile_orders h3.prod_name + p {
+        text-align: center;
+    }
+    .userprofile_orders h3.adrs.bold.title {
+        margin-top: 10px;
+        text-align: center;
+    }
+    .userprofile_orders h3.adrs.bold.title + .adrs {
+        margin-top: 10px;
+        text-align: center;
+    }
+    section.recentlyViewed.user_dash_recent {
+        margin: 30px 0 50px 0;
+    }
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio: 2) {
