--- a/css/style.css
+++ b/css/style.css
@@ -1520,8 +1520,13 @@ main_search {
     padding: 0 0px 0 10px;
     width: 100% !important;
     border-radius: 0;
+    -webkit-appearance: none;
 }
-
+.looking_select  i.icon-angle-down {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 .main_search .form-group {
     width: 100%;
     padding: 0;
@@ -2897,9 +2902,43 @@ p.signup-policy {
 .advanced-modal-body .ui-slider-horizontal {
     height: 3px;
 }
+.ui-widget.ui-widget-content {
+    border: 0px solid #000000!important;
+}
 .advanced-modal-body .ui-slider-horizontal .ui-slider-handle {
-    top: -0.7em;
+    top : -4px!important;
     margin-left: -.6em;
+}
+.ui-widget-header {
+    border: 1px solid #dddddd;
+    background: #000000;
+    color: #000000;
+    font-weight: bold;
+}
+.ui-widget-content {
+    border: 1px solid #a09f9f;
+    background: #dddddd;
+    color: #333333;
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:active {
+    border: 4px solid #000000;
+    background: #000;
+    font-weight: normal;
+    color: #454545;
+    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+}
+.ui-widget-content .ui-state-default:hover {
+    border: 4px solid #000000;
+    background: #000;
+    font-weight: normal;
+    color: #454545;
+    border-radius: 10px;
+    width: 14px;
+    height: 14px;
+    transition-delay: 0.6s;
+   
 }
 .userprofile_section_page .form-group {
     border-bottom: 0px solid #dccdcd;
@@ -5306,19 +5345,15 @@ button.busi_sub_btn {
     }
     :-ms-input-placeholder {
         color: #555 !important;
-        text-transform: uppercase;
     }
     ::-moz-placeholder {
         color: #555 !important;
-        text-transform: uppercase;
     }
     :-moz-placeholder {
         color: #555 !important;
-        text-transform: uppercase;
     }
     ::-webkit-input-placeholder {
         color: #555 !important;
-        text-transform: uppercase;
     }
 }
 @media (min-width: 768px) and (max-width: 780px) {
