--- a/css/style.css
+++ b/css/style.css
@@ -3719,7 +3719,9 @@ button.busi_sub_btn {
         float: left!important;
         padding-left: 18px;
     }
-
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: #FFFFFF;
+    }
 
 }
 
