--- a/css/style.css
+++ b/css/style.css
@@ -3664,6 +3664,15 @@ button.busi_sub_btn {
 
 
 
+.megamenu {
+    width: 400px;
+}
+.megamenu_dropdown:hover > .megamenu_menu {
+    display: block;
+}
+.megamenu_subdrpdown:hover > .megamenu {
+    display: block;
+}
 
 
 
