--- a/css/style.css
+++ b/css/style.css
@@ -3667,14 +3667,29 @@ button.busi_sub_btn {
 .megamenu {
     width: 400px;
 }
-.megamenu_dropdown:hover > .megamenu_menu {
+/*.megamenu_dropdown:hover > .megamenu_menu {
     display: block;
 }
 .megamenu_subdrpdown:hover > .megamenu {
     display: block;
+}*/
+.megamenu_menu > li a {
+    padding: 5px 20px;
 }
-
-
+ul.megamenu_list {
+    list-style: none;
+    padding-left: 5px;
+}
+ul.megamenu_list li a {
+    padding: 5px 0px;
+}
+.megamenu {
+    padding: 10px 5px 10px 5px;
+}
+.megamenu h3 {
+    margin-top: 5px;
+    font-size: 20px;
+}
 
 
 @keyframes spin {
